All issues related to alignment ar fixed

--- a/Qeemah/WebContent/common/css/style.css
+++ b/Qeemah/WebContent/common/css/style.css
@@ -1,6 +1,21 @@
 /* .sapMITBFilterDefault{
 	color: #01456A;
 } */
+/*class to change height of input box*/
+.sapMInputBaseInner {
+  color: #000000;
+  background-color: #ffffff;
+  border: 1px solid #bfbfbf;
+  margin: 0;
+  font-size: 0.875rem;
+  font-family: Arial,Helvetica,sans-serif;
+  line-height: normal;
+  height: 2rem;
+  vertical-align: top;
+  padding: 0 0.75rem;
+  -moz-appearance: textfield;
+}
+
 .preventscrolling {
     overflow: hidden;
 }
